# SciPAL

./: CMakeLists.txt  README  README.md  index.html
config/: dealii_mpi_conf.pro  dealii_mpi_conf.pro_in  dealii_simple_conf.pro  dealii_simple_conf.pro_in  scipal_conf.pro  scipal_conf.pro_in  scipal_conf.pro~
doc/style-sheets/: screen.css  stylesheet.css
doc/tutorial/: Makefile  Makefile.dep  gather_cu_and_cpp.py  head.html  index.html  navbar.html  program2doxygen  program2doxyplain  program2html  program2toc  title.html  toc.html
include/base/: ArchTraits.h  CUDATimer.h  CUDA_error_check.h  Complex.h  CudaComplex.h  ForewardDeclarations.h  GPUInfo.h  ParallelArch.h  PrecisionTraits.h  VTraits.h  Zero_One_Traits.h  print_info.h  sign.h
include/lac/: Array.h  BlasMatrixOperations.h  BlasVectorOperations.h  Expr.h  FullMatrixAccessor.h  Literal.h  MatrixCreator.h  OperandInfo.h  PreconditionJacobiAdapter.h  PreconditionerAINV.h  PreconditionerAINV.hh  Preconditioner_AINV.hh  Shape.h  ShapeData.h  SparseMatrixAccessor.h  SparseMatrixAccessor.hh  UnaryFunctions.h  VectorCustomOperations.h  blas++.h  blas_wrapper.hh  cublas_BlancMatrix.h  cublas_BlancMatrixImporter.h  cublas_Matrix.h  cublas_SubMatrixView.h  cublas_SubVectorView.h  cublas_Vector.h  cublas_VectorView.h  cublas_algorithms.h  cublas_wrapper.hh  expression_template.h  expression_template_helper.h  expression_templates_device.h  expression_templates_host.h  scipal_kernels_wrapper.cu.h  solver_bicgstab_cuda.h  solver_cg_cuda.h  solver_cuda.h  solver_gmres_cuda.h  solver_qmrcgstab_cuda.h  solver_qmrcgstab_cuda_mod.h  (+2 more)
include/numerics/: FFTWrapper.h  RNDwrapper.h  SolverWrapper.h  algorithms.hh  cusolverDn_wrapper.h  lapack_wrapper.h  propagation_kernels.cu  propagation_kernels.cu.c  propagation_kernels_wrapper.cu.h
scripts/: add_LGPL.py  add_LGPL.py~  copy_cuda_step.py  copy_cuda_step.py~  createInst.py  createInst.py~  install.py  make_new_cuda_mini_step.py  make_new_cuda_step.py  make_new_cuda_step.py~  remove_LGPL.py  remove_LGPL.py~
scripts/doc/: Makefile.dox_doc  cuda_prak.dox  (+12 more)
src/: print_info.cpp
testsite/step-35/: .gitignore  ADMMParams.h  CMakeLists.txt  SimParams.h  autoInstantiations.h  bibfile_gauss.txt  cuda_driver_step-35.h  cuda_driver_step-35.hh  cuda_helper.h  cuda_kernel_step-35.cu  cuda_kernel_step-35.cu.c  cuda_kernel_wrapper_step-35.cu.h  doxygen_filelist  extremeValueStatisticsGenerator.h  haar.hpp  patch.h  preprocessor_directives.h  smre_problem.hh  step-35.cpp  step-35.hh  step-35.prm  step-35.pro
testsite/step-35/cufftShift/Src/: cufftShiftShared.h
testsite/step-35/cufftShift/Src/CUDA/Interfaces/in-place/: cufftShift_1D_IP_impl.cu  cufftShift_2D_IP_impl.cu  cufftShift_3D_IP_impl.cu
testsite/step-35/cufftShift/Src/CUDA/Interfaces/out-of-place/: cufftShift_1D_OP_impl.cu  cufftShift_2D_OP_impl.cu  cufftShift_3D_OP_impl.cu
testsite/step-35/cufftShift/Src/CUDA/Kernels/in-place/: cufftShift_1D_IP.cu  cufftShift_2D_IP.cu  cufftShift_3D_IP.cu
testsite/step-35/cufftShift/Src/CUDA/Kernels/out-of-place/: cufftShift_1D_OP.cu  cufftShift_2D_OP.cu  cufftShift_3D_OP.cu
testsite/step-35/cufftShift/Src/CXX/: cufftShift_1D.h  cufftShift_2D.h  cufftShift_3D.h
testsite/step-35/cufftShift/Src/cuUtils/: configGPU.cpp  configGPU.h
testsite/step-35/doc/: intro.dox  results.dox  sofi2_phNoise100_bg2.tif  sofi2_smre_phNoise100_bg2.tif  step-35.bib
testsite/step-35/doc/images/: coor_deconv.txt  coor_noise.txt  frc.tex  generic.tif  l2dist.m  lena.tif  local_test.m  montage  noise_compare.tif  poster.tex  psd_data  psd_data_single  psd_lena.m  psd_lena.tex  psd_lena_data  psd_single.tex  psd_t.tex  res.tex  res_log.txt  result_approx.tif  result_exact.tif  runtime.tex  sofi_den_single.tif  sofi_orig_single.tif  sofi_result.analysis.tif  sofi_result.analysis_orig.tif  speed_log  speed_log.approx  speed_log.approx.plot  speed_log.cpu  speed_log.cpu.plot  speed_log.exact  speed_log.exact.plot  speed_log.exact_double.plot  speed_log.old  speedup.data.fd.plot  speedup.data.plot  speedup.tex  tif2png.m
testsite/step-35/examples/lena_1/: control.tif  good_parameters.txt  noise.tif  parameters_stripped.txt
testsite/step-35/examples/lena_5/: control.tif  good_parameters.txt  noise.tif  parameters_stripped
testsite/step-35/examples/micrograph/: control.tif  haar_smoothed.tif  micrograph_anscombe.tif
testsite/step-35/examples/noise_no_smooth/: control.tif
testsite/step-35/prm/: dyadic_Dykstra_weights.gp.txt  monk_1024.tif  monk_256.tif  monk_512.tif  step-35-eule.prm  step-35-jh.prm  step-35.prm
(+218 files in other folders)
